--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -207,8 +207,8 @@
 	</div>
 	<div class="form-group mb-3">
 		<!-- Questa è la barra di ricerca con la dropdown per i risultati -->
-		<textarea id="multiRicerca" cols="30" rows="1" hx-get="{{url_for('movimenti.fetchCategorie')}}" hx-trigger="#multiRicerca changed delay:300ms" hx-target="#multiDropdown"></textarea>
-		<div id="multiDropdwon"></div>
+		<textarea id="multiRicerca" name="multiRicerca" cols="30" rows="1" hx-get="{{url_for('movimenti.fetchCategorie')}}" hx-trigger="keyup changed delay:300ms" hx-target="#multiDropdown"></textarea>
+		<div id="multiDropdown"></div>
 	</div>
 	<div>
 		<!-- Questa è la select hidden che verrà inviata con la submit -->
