--- a/src/ContaPapagneApp/templates/head.html
+++ b/src/ContaPapagneApp/templates/head.html
@@ -3,6 +3,7 @@
 <script src="https://unpkg.com/htmx.org@1.9.9"></script>
 <script src="../static/js/util.js"></script>
 <script src="../static/js/multi.js"></script>
+<link rel="stylesheet" href="../static/css/main.css">
 
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
