--- a/src/ContaPapagneApp/templates/mov/list-categorie.html
+++ b/src/ContaPapagneApp/templates/mov/list-categorie.html
@@ -1,5 +1,5 @@
 {% for cat in categorie %}
 <div onclick="addCategoryToMulti(event)" style="background-color:{{ cat.colore }}" id="{{ cat.id_categoria }}">
-	<span>{{ cat.nome }}</span>
+	{{ cat.nome }}
 </div>
 {% endfor %}
