--- a/src/ContaPapagneApp/templates/mov/lista-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/lista-movimenti.html
@@ -1,9 +1,6 @@
-
-
     <div class="container py-5">
         <div class="row">
             <div class="col-lg-12 mx-auto bg-white rounded shadow">
-
                 <div class="table-responsive">
                     <table class="table table-fixed">
                         <thead>
@@ -11,7 +8,7 @@
                                 <th scope="col" class="col-2 py-4">Importo</th>
                                 <th scope="col" class="col-4 py-4">Categorie</th>
                                 <th scope="col" class="col-2 py-4">Data</th>
-                                <th scope="col" class="col-4 py-4">Descrizione</th>
+                                <th scope="col" class="col-4 py-4">Entrata?</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -21,14 +18,13 @@
                                 <td class="col-4 py-2">
                                         <div>
                                         <div class="d-flex flex-wrap gap-2 justify-content-start">
-                                                {% for categoria in movimenti.categorie %}
-                                                <span class="categoria bg-secondary text-white px-2 rounded">{{ categoria.nome }} </span>
+                                                {% for categoria in item.categorie %}
+                                                <span class="categoria bg-secondary text-white px-2 rounded" style="background-color: {{categoria.colore}};">{{ categoria.nome }} </span>
                                                 {% endfor %}
-                                                <span class="categoria bg-secondary text-white px-2 rounded"> abc</span>
                                         </div>
                                     </div></td>
                                 <td class="col-2 py-2">{{ item.data }}</td>
-                                <td class="col-4 py-2">{{ item.descrizione }}</td>
+                                <td class="col-4 py-2">{{ item.flag_entrata }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
