Formattato html form

--- a/src/ContaPapagneApp/static/css/main.css
+++ b/src/ContaPapagneApp/static/css/main.css
@@ -1,3 +1,172 @@
 .hidden {
 	display: none;
 }
+
+.tags-look .tagify__dropdown__item {
+	display: inline-block;
+	vertical-align: middle;
+	border-radius: 3px;
+	padding: .3em .5em;
+	border: 1px solid #CCC;
+	background: #F3F3F3;
+	margin: .2em;
+	font-size: .85em;
+	color: black;
+	transition: 0s;
+}
+
+.tags-look .tagify__dropdown__item--active {
+	color: black;
+}
+
+.tags-look .tagify__dropdown__item:hover {
+	background: lightyellow;
+	border-color: gold;
+}
+
+.tags-look .tagify__dropdown__item--hidden {
+	max-width: 0;
+	max-height: initial;
+	padding: .3em 0;
+	margin: .2em 0;
+	white-space: nowrap;
+	text-indent: -20px;
+	border: 0;
+}
+
+/* styling per  category labels */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.tag {
+	display: inline-block;
+	padding: 6px 12px;
+	background-color: #f8f8f8;
+	border: none;
+	border-radius: 3px;
+	margin: 4px;
+	position: relative;
+	font-family: 'Roboto', sans-serif;
+	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.tag:hover {
+	background-color: #f0f0f0;
+}
+
+.rimuovi img {
+	width: 12px;
+	height: 12px;
+	cursor: pointer;
+	opacity: 0.7;
+	transition: opacity 0.2s ease;
+}
+
+.rimuovi img:hover {
+	opacity: 1;
+}
+
+/* styling per  toggle */
+
+.highlight-checkbox {
+	background-color: #ffc6a2;
+	border-color: #ffc6a2;
+}
+
+.highlight {
+	font-weight: bold;
+	padding: 2px 6px;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.entrata.highlight {
+	color: #0d6efd;
+	background-color: #d1e7ff;
+	border: 1px solid #0d6efd;
+}
+
+.uscita.highlight {
+	color: #D25A0F;
+	background-color: #ffc6a2;
+	border: 1px solid #D25A0F;
+}
+
+.hide {
+	display: none !important;
+}
+
+.icon-container img:nth-child(2) {
+	display: none;
+}
+
+.icon-container:hover img:nth-child(1) {
+	display: none;
+}
+
+.icon-container:hover img:nth-child(2) {
+	display: block;
+}
+
+/* CSS toggle slider */
+/* The switch - the box around the slider */
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #e49504;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked+.slider {
+	background-color: #2196F3;
+}
+
+input:focus+.slider {
+	box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+}
