--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -3,7 +3,7 @@
 		<label for="tipologia_movimento">Tipo di form:</label>
 		<div class="form-check form-switch">
 			<input class="form-check-input highlight-checkbox" id="tipologia_movimento" name="tipologia_movimento"
-				type="checkbox" value="true" onchange="switchTipoMovimento();toggleTooltipVisibility();boldTipologia();log(event)">
+				type="checkbox" value="true" onchange="cleanCategorieAndDropdown(event)">
 			<label class="form-check-label" for="tipologia_movimento">
 				<span id="uscita" class="uscita highlight">USCITA</span>
 				<span id="entrata" class="hide entrata">ENTRATA</span>
@@ -35,7 +35,9 @@
 	</div>
 	<div class="form-group mb-3">
 		<!-- Questa è la barra di ricerca con la dropdown per i risultati -->
-		<textarea id="multiRicerca" name="multiRicerca" cols="30" rows="1" hx-get="{{url_for('movimenti.fetchCategorie')}}" hx-trigger="keyup changed delay:300ms" hx-target="#multiDropdown"></textarea>
+		<textarea id="multiRicerca" name="multiRicerca" cols="30" rows="1"
+			hx-get="{{url_for('movimenti.fetchCategorie')}}" hx-trigger="keyup changed delay:300ms"
+			hx-target="#multiDropdown"></textarea>
 		<div id="multiDropdown"></div>
 	</div>
 	<div>
