Fix onchange event handler

--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -3,7 +3,7 @@
 		<label for="tipologia_movimento">Tipo di form:</label>
 		<div class="form-check form-switch">
 			<input class="form-check-input highlight-checkbox" id="tipologia_movimento" name="tipologia_movimento"
-				type="checkbox" value="true" onchange="cleanCategorieAndDropdown(event)">
+				type="checkbox" value="true" onchange="formTypeSwitchWrapper(event)">
 			<label class="form-check-label" for="tipologia_movimento">
 				<span id="uscita" class="uscita highlight">USCITA</span>
 				<span id="entrata" class="hide entrata">ENTRATA</span>
